features and bugfix
